[package]
name = "ctp_md"
version = "0.8.0"
authors = ["caleb.xiang <caleb.xiang@sinobot.com.cn>"]
edition = "2018"
links = "ctp_md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
channel = ["crossbeam-channel"]

[dependencies]
crossbeam-channel = { version = "0.4", optional = true }

[dependencies.ctp-common]
version = "0.8.0"
path = "../ctp-common"
