[package]
name = "ctp-md"
version = "0.8.0"
authors = ["caleb.xiang <caleb.xiang@gmail.com>"]
edition = "2018"
links = "ctp-md"

[features]
channel = ["crossbeam-channel"]

[dependencies]
crossbeam-channel = { version = "0.4", optional = true }

[dependencies.ctp-common]
version = "0.8.0"
path = "../ctp-common"
